# dpokitpy

./: .gitignore  LICENSE  README.md  app_gradio.py  benchmark_results.json  pyproject.toml  test.py
benchmark/: bm_cnh.py  bm_cnpj.py  bm_cpf.py  bm_email.py  bm_phone.py  bm_pis.py  bm_rg.py  bm_rg_es.py  bm_rg_mg.py  bm_rg_outros.py  bm_rg_rj.py  bm_rg_sp.py  runner.py
dpokitpy/: __init__.py  audit_logger.py  guard.py  masker.py  models.py  scanner.py
dpokitpy/policies/br/: lgpd.py
dpokitpy/validators/br/: cnh.py  cnpj.py  cpf.py  email.py  phone.py  pis.py  rg.py  rg_common.py  rg_es.py  rg_mg.py  rg_outros.py  rg_rj.py  rg_sp.py
hf_space/: requirements.txt
